contraste fix

--- a/UF-3/Proyecto1/layout/styles/framework.css
+++ b/UF-3/Proyecto1/layout/styles/framework.css
@@ -8,6 +8,12 @@ Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 File: Framework CSS
 */
+footer a {
+    color: #FFFFFF;
+}
+ .clients{
+    background: #FFFFFF;
+}
 
 html{overflow-y:scroll; overflow-x:hidden;}
 html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
